# crow

./: Cargo.toml  Makefile  README.md
plugin/.claude-plugin/: plugin.json
plugin/agents/: pr-reviewer.md
plugin/commands/: checkout.md  ci.md  comment.md  done.md  push.md  review.md  reviews.md  status.md
plugin/skills/review-pr/: SKILL.md
src/: cli.rs  display.rs  gh.rs  main.rs  test_helpers.rs  types.rs  wt.rs
src/cmd/: checkout.rs  ci.rs  comment.rs  done.rs  install_plugin.rs  mod.rs  push.rs  review.rs  reviews.rs  status.rs
tests/: cli_tests.rs
