[package]
name = "crow"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crow"
path = "src/main.rs"

[lib]
name = "crow"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
owo-colors = "4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
